--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> ProjectJavaScript</title>
-    <script src="index.js"></script>
+    <!-- <script src="index.js"></script> -->
 </head>
 <body>
     <h1>Hello World!</h1>
     <p> This is my page where I am testing out and working on my JavaScript programming!</p>
-    <button id="colorbutton">Change color</button>
+    <button id="colourButton">Change colour</button>
+    <script src="index.js"></script>
 </body>
 </html>
 
