hmtl structure for slideshow

--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 <body>
     <h1>Hello World!</h1>
     <p> This is my page where I am testing out and working on my JavaScript programming!</p>
+    
     <button id="colourButton">Change colour</button>
+
+    <div id="slideshow">
+        <img src="img1" alt="the image here">
+        <img src="img2" alt="the image here">
+        <img src="img3" alt="the image here">
+    </div>
+
     <script src="index.js"></script>
 </body>
 </html>
