all js code and hmtl added for slideshow

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <button id="colourButton">Change colour</button>
 
     <div id="slideshow">
-        <img src="img1" alt="the image here">
-        <img src="img2" alt="the image here">
-        <img src="img3" alt="the image here">
+        <img src="./slideshow_images/beware_of_the_frog_web.jpg" alt="beware of the frog">
+        <img src="./slideshow_images/dark_dare_web.jpg" alt="dark web">
+        <img src="./slideshow_images/dragons_day_off_web.jpg" alt="dragons day off">
     </div>
 
     <script src="index.js"></script>
