started on book, functions

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> ProjectJavaScript</title>
-    <!-- <script src="index.js"></script> -->
 </head>
 <body>
     <h1>Hello World!</h1>
@@ -18,7 +17,9 @@
         <img src="./slideshow_images/dragons_day_off_web.jpg" alt="dragons day off">
     </div>
 
+    <noscript>JavaScript is not enabled!</noscript>
     <script src="index.js"></script>
+
 </body>
 </html>
 
